tests/input/conf/invalid/invalid7.cnf
[server]
ip = 127.0.0.1
port = 53

[zone]
name = abc
path = input/zones/invalid/invalid3.zone
